// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Preview 1`] = `
<div data-size="auto">
  <div>
    <div>
      <ds-field>
        <label
          data-weight="medium"
          for="<removed>"
        >
          Søk
        </label>
        <div>
          <input
            placeholder
            aria-label="Søk"
            type="search"
            value
            id="<removed>"
          >
          <button
            data-icon="true"
            data-variant="tertiary"
            type="reset"
            aria-label="Tøm"
          >
          </button>
        </div>
      </ds-field>
      <div>
        <ds-field>
          <label
            data-weight="medium"
            for="<removed>"
          >
            Velg emne(r)
          </label>
          <ds-suggestion
            data-multiple
            hover
            data-color="neutral"
          >
            <input
              placeholder=" "
              type="text"
              id="<removed>"
              aria-description="No selected"
              list=":u-datalist1"
              popovertarget=":u-datalist1"
            >
            <button
              aria-label="Tøm"
              hidden
              type="reset"
              aria-hidden="false"
              tabindex="-1"
            >
            </button>
            <u-datalist
              data-nofilter
              data-sr-plural="%d forslag"
              data-sr-singular="%d forslag"
              popover="manual"
              role="listbox"
              data-sr-of="of"
              hidden
              tabindex="-1"
              aria-multiselectable="true"
              id="<removed>"
              data-is-floating="true"
            >
              <u-option
                label="Engelsk"
                value="Engelsk"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Engelsk
              </u-option>
              <u-option
                label="Hovedmål"
                value="Hovedmål"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Hovedmål
              </u-option>
              <u-option
                label="Matematikk"
                value="Matematikk"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Matematikk
              </u-option>
              <u-option
                label="Sidemål"
                value="Sidemål"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Sidemål
              </u-option>
            </u-datalist>
          </ds-suggestion>
        </ds-field>
        <ds-field>
          <label
            data-weight="medium"
            for="<removed>"
          >
            Velg fylke(r)
          </label>
          <ds-suggestion
            data-multiple
            hover
            data-color="neutral"
          >
            <input
              placeholder=" "
              type="text"
              id="<removed>"
              aria-description="No selected"
              list=":u-datalist2"
              popovertarget=":u-datalist2"
            >
            <button
              aria-label="Tøm"
              hidden
              type="reset"
              aria-hidden="false"
              tabindex="-1"
            >
            </button>
            <u-datalist
              data-nofilter
              data-sr-plural="%d forslag"
              data-sr-singular="%d forslag"
              popover="manual"
              role="listbox"
              data-sr-of="of"
              hidden
              tabindex="-1"
              aria-multiselectable="true"
              id="<removed>"
              data-is-floating="true"
            >
              <u-option
                label="Agder"
                value="Agder"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Agder
              </u-option>
              <u-option
                label="Akershus"
                value="Akershus"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Akershus
              </u-option>
              <u-option
                label="Buskerud"
                value="Buskerud"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Buskerud
              </u-option>
              <u-option
                label="Finnmark"
                value="Finnmark"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Finnmark
              </u-option>
              <u-option
                label="Innlandet"
                value="Innlandet"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Innlandet
              </u-option>
              <u-option
                label="Nordland"
                value="Nordland"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Nordland
              </u-option>
              <u-option
                label="Oslo"
                value="Oslo"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Oslo
              </u-option>
              <u-option
                label="Rogaland"
                value="Rogaland"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Rogaland
              </u-option>
              <u-option
                label="Telemark"
                value="Telemark"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Telemark
              </u-option>
              <u-option
                label="Troms"
                value="Troms"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Troms
              </u-option>
              <u-option
                label="Vestland"
                value="Vestland"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Vestland
              </u-option>
              <u-option
                label="Viken"
                value="Viken"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Viken
              </u-option>
            </u-datalist>
          </ds-suggestion>
        </ds-field>
      </div>
    </div>
    <table
      data-hover="true"
      data-color="neutral"
    >
      <thead>
        <tr>
          <th>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                aria-label="Velg alle"
                type="checkbox"
                id="<removed>"
              >
            </ds-field>
          </th>
          <th>
            Fylke, emne
          </th>
          <th>
            Fylke
          </th>
          <th>
            Emne
          </th>
          <th>
            Antall elever
          </th>
          <th>
            Standpunkt
          </th>
          <th>
            Muntlig
          </th>
          <th>
            Skriftlig
          </th>
          <th aria-label="Rediger">
            Rediger
          </th>
          <th aria-label="Handlinger">
            Handling
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                aria-label="Velg rad for Agder, Engelsk"
                type="checkbox"
                id="<removed>"
              >
            </ds-field>
          </td>
          <td>
            Agder,
            <br>
            Engelsk
          </td>
          <td>
            Agder
          </td>
          <td>
            Engelsk
          </td>
          <td>
            11636
          </td>
          <td>
            3.07
          </td>
          <td>
            3.57
          </td>
          <td>
            3.26
          </td>
          <td>
            <button
              data-variant="tertiary"
              type="button"
              data-size="sm"
              aria-label="Rediger"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M14.97 4.47a3.2 3.2 0 0 1 4.562.001c1.26 1.27 1.268 3.368-.002 4.637l-8.5 8.5a.75.75 0 0 1-.38.204l-4.5.922a.75.75 0 0 1-.882-.897l1-4.5a.75.75 0 0 1 .202-.367zm3.498 1.058a1.7 1.7 0 0 0-2.438.002l-.97.97 2.479 2.478.93-.93c.68-.68.681-1.832-.001-2.52M7.685 13.876 14 7.56l2.478 2.478-6.35 6.35-3.145.644zM3.5 20.25a.75.75 0 0 0 0 1.5h17a.75.75 0 0 0 0-1.5z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </td>
          <td>
            <button
              data-icon="true"
              data-variant="tertiary"
              type="button"
              popovertarget="row-menu-Agder-Engelsk"
              title="Flere valg"
              aria-label="Handlinger"
              data-size="sm"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M10.5 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0m0 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0m1.5 4.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
            <div
              id="<removed>"
              popover="manual"
              data-placement="bottom-end"
              data-variant="default"
            >
              <ul>
                <li>
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Rediger"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M14.97 4.47a3.2 3.2 0 0 1 4.562.001c1.26 1.27 1.268 3.368-.002 4.637l-8.5 8.5a.75.75 0 0 1-.38.204l-4.5.922a.75.75 0 0 1-.882-.897l1-4.5a.75.75 0 0 1 .202-.367zm3.498 1.058a1.7 1.7 0 0 0-2.438.002l-.97.97 2.479 2.478.93-.93c.68-.68.681-1.832-.001-2.52M7.685 13.876 14 7.56l2.478 2.478-6.35 6.35-3.145.644zM3.5 20.25a.75.75 0 0 0 0 1.5h17a.75.75 0 0 0 0-1.5z"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Rediger
                  </button>
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Eksporter"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Eksporter
                  </button>
                  <hr aria-hidden="true">
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Slett"
                    data-color="danger"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M10 4.75c-.69 0-1.25.56-1.25 1.25v.25h6.5V6c0-.69-.56-1.25-1.25-1.25zm6.75 1.5V6A2.75 2.75 0 0 0 14 3.25h-4A2.75 2.75 0 0 0 7.25 6v.25H4.5a.75.75 0 0 0 0 1.5h.805l.876 11.384a1.75 1.75 0 0 0 1.745 1.616h8.148a1.75 1.75 0 0 0 1.745-1.616l.875-11.384h.806a.75.75 0 0 0 0-1.5h-2.75m-6 4.25a.75.75 0 0 0-1.5 0v6a.75.75 0 0 0 1.5 0zM14 9.75a.75.75 0 0 1 .75.75v6a.75.75 0 0 1-1.5 0v-6a.75.75 0 0 1 .75-.75"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Slett
                  </button>
                </li>
              </ul>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                aria-label="Velg rad for Agder, Matematikk"
                type="checkbox"
                id="<removed>"
              >
            </ds-field>
          </td>
          <td>
            Agder,
            <br>
            Matematikk
          </td>
          <td>
            Agder
          </td>
          <td>
            Matematikk
          </td>
          <td>
            14191
          </td>
          <td>
            3.72
          </td>
          <td>
            3.55
          </td>
          <td>
            3.16
          </td>
          <td>
            <button
              data-variant="tertiary"
              type="button"
              data-size="sm"
              aria-label="Rediger"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M14.97 4.47a3.2 3.2 0 0 1 4.562.001c1.26 1.27 1.268 3.368-.002 4.637l-8.5 8.5a.75.75 0 0 1-.38.204l-4.5.922a.75.75 0 0 1-.882-.897l1-4.5a.75.75 0 0 1 .202-.367zm3.498 1.058a1.7 1.7 0 0 0-2.438.002l-.97.97 2.479 2.478.93-.93c.68-.68.681-1.832-.001-2.52M7.685 13.876 14 7.56l2.478 2.478-6.35 6.35-3.145.644zM3.5 20.25a.75.75 0 0 0 0 1.5h17a.75.75 0 0 0 0-1.5z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </td>
          <td>
            <button
              data-icon="true"
              data-variant="tertiary"
              type="button"
              popovertarget="row-menu-Agder-Matematikk"
              title="Flere valg"
              aria-label="Handlinger"
              data-size="sm"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M10.5 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0m0 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0m1.5 4.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
            <div
              id="<removed>"
              popover="manual"
              data-placement="bottom-end"
              data-variant="default"
            >
              <ul>
                <li>
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Rediger"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M14.97 4.47a3.2 3.2 0 0 1 4.562.001c1.26 1.27 1.268 3.368-.002 4.637l-8.5 8.5a.75.75 0 0 1-.38.204l-4.5.922a.75.75 0 0 1-.882-.897l1-4.5a.75.75 0 0 1 .202-.367zm3.498 1.058a1.7 1.7 0 0 0-2.438.002l-.97.97 2.479 2.478.93-.93c.68-.68.681-1.832-.001-2.52M7.685 13.876 14 7.56l2.478 2.478-6.35 6.35-3.145.644zM3.5 20.25a.75.75 0 0 0 0 1.5h17a.75.75 0 0 0 0-1.5z"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Rediger
                  </button>
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Eksporter"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Eksporter
                  </button>
                  <hr aria-hidden="true">
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Slett"
                    data-color="danger"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M10 4.75c-.69 0-1.25.56-1.25 1.25v.25h6.5V6c0-.69-.56-1.25-1.25-1.25zm6.75 1.5V6A2.75 2.75 0 0 0 14 3.25h-4A2.75 2.75 0 0 0 7.25 6v.25H4.5a.75.75 0 0 0 0 1.5h.805l.876 11.384a1.75 1.75 0 0 0 1.745 1.616h8.148a1.75 1.75 0 0 0 1.745-1.616l.875-11.384h.806a.75.75 0 0 0 0-1.5h-2.75m-6 4.25a.75.75 0 0 0-1.5 0v6a.75.75 0 0 0 1.5 0zM14 9.75a.75.75 0 0 1 .75.75v6a.75.75 0 0 1-1.5 0v-6a.75.75 0 0 1 .75-.75"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Slett
                  </button>
                </li>
              </ul>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                aria-label="Velg rad for Agder, Hovedmål"
                type="checkbox"
                id="<removed>"
              >
            </ds-field>
          </td>
          <td>
            Agder,
            <br>
            Hovedmål
          </td>
          <td>
            Agder
          </td>
          <td>
            Hovedmål
          </td>
          <td>
            12283
          </td>
          <td>
            3.81
          </td>
          <td>
            3.57
          </td>
          <td>
            3.16
          </td>
          <td>
            <button
              data-variant="tertiary"
              type="button"
              data-size="sm"
              aria-label="Rediger"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M14.97 4.47a3.2 3.2 0 0 1 4.562.001c1.26 1.27 1.268 3.368-.002 4.637l-8.5 8.5a.75.75 0 0 1-.38.204l-4.5.922a.75.75 0 0 1-.882-.897l1-4.5a.75.75 0 0 1 .202-.367zm3.498 1.058a1.7 1.7 0 0 0-2.438.002l-.97.97 2.479 2.478.93-.93c.68-.68.681-1.832-.001-2.52M7.685 13.876 14 7.56l2.478 2.478-6.35 6.35-3.145.644zM3.5 20.25a.75.75 0 0 0 0 1.5h17a.75.75 0 0 0 0-1.5z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </td>
          <td>
            <button
              data-icon="true"
              data-variant="tertiary"
              type="button"
              popovertarget="row-menu-Agder-Hovedmål"
              title="Flere valg"
              aria-label="Handlinger"
              data-size="sm"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M10.5 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0m0 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0m1.5 4.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
            <div
              id="<removed>"
              popover="manual"
              data-placement="bottom-end"
              data-variant="default"
            >
              <ul>
                <li>
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Rediger"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M14.97 4.47a3.2 3.2 0 0 1 4.562.001c1.26 1.27 1.268 3.368-.002 4.637l-8.5 8.5a.75.75 0 0 1-.38.204l-4.5.922a.75.75 0 0 1-.882-.897l1-4.5a.75.75 0 0 1 .202-.367zm3.498 1.058a1.7 1.7 0 0 0-2.438.002l-.97.97 2.479 2.478.93-.93c.68-.68.681-1.832-.001-2.52M7.685 13.876 14 7.56l2.478 2.478-6.35 6.35-3.145.644zM3.5 20.25a.75.75 0 0 0 0 1.5h17a.75.75 0 0 0 0-1.5z"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Rediger
                  </button>
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Eksporter"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Eksporter
                  </button>
                  <hr aria-hidden="true">
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Slett"
                    data-color="danger"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M10 4.75c-.69 0-1.25.56-1.25 1.25v.25h6.5V6c0-.69-.56-1.25-1.25-1.25zm6.75 1.5V6A2.75 2.75 0 0 0 14 3.25h-4A2.75 2.75 0 0 0 7.25 6v.25H4.5a.75.75 0 0 0 0 1.5h.805l.876 11.384a1.75 1.75 0 0 0 1.745 1.616h8.148a1.75 1.75 0 0 0 1.745-1.616l.875-11.384h.806a.75.75 0 0 0 0-1.5h-2.75m-6 4.25a.75.75 0 0 0-1.5 0v6a.75.75 0 0 0 1.5 0zM14 9.75a.75.75 0 0 1 .75.75v6a.75.75 0 0 1-1.5 0v-6a.75.75 0 0 1 .75-.75"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Slett
                  </button>
                </li>
              </ul>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                aria-label="Velg rad for Agder, Sidemål"
                type="checkbox"
                id="<removed>"
              >
            </ds-field>
          </td>
          <td>
            Agder,
            <br>
            Sidemål
          </td>
          <td>
            Agder
          </td>
          <td>
            Sidemål
          </td>
          <td>
            11861
          </td>
          <td>
            3.75
          </td>
          <td>
            3.26
          </td>
          <td>
            3.51
          </td>
          <td>
            <button
              data-variant="tertiary"
              type="button"
              data-size="sm"
              aria-label="Rediger"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M14.97 4.47a3.2 3.2 0 0 1 4.562.001c1.26 1.27 1.268 3.368-.002 4.637l-8.5 8.5a.75.75 0 0 1-.38.204l-4.5.922a.75.75 0 0 1-.882-.897l1-4.5a.75.75 0 0 1 .202-.367zm3.498 1.058a1.7 1.7 0 0 0-2.438.002l-.97.97 2.479 2.478.93-.93c.68-.68.681-1.832-.001-2.52M7.685 13.876 14 7.56l2.478 2.478-6.35 6.35-3.145.644zM3.5 20.25a.75.75 0 0 0 0 1.5h17a.75.75 0 0 0 0-1.5z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </td>
          <td>
            <button
              data-icon="true"
              data-variant="tertiary"
              type="button"
              popovertarget="row-menu-Agder-Sidemål"
              title="Flere valg"
              aria-label="Handlinger"
              data-size="sm"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M10.5 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0m0 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0m1.5 4.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
            <div
              id="<removed>"
              popover="manual"
              data-placement="bottom-end"
              data-variant="default"
            >
              <ul>
                <li>
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Rediger"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M14.97 4.47a3.2 3.2 0 0 1 4.562.001c1.26 1.27 1.268 3.368-.002 4.637l-8.5 8.5a.75.75 0 0 1-.38.204l-4.5.922a.75.75 0 0 1-.882-.897l1-4.5a.75.75 0 0 1 .202-.367zm3.498 1.058a1.7 1.7 0 0 0-2.438.002l-.97.97 2.479 2.478.93-.93c.68-.68.681-1.832-.001-2.52M7.685 13.876 14 7.56l2.478 2.478-6.35 6.35-3.145.644zM3.5 20.25a.75.75 0 0 0 0 1.5h17a.75.75 0 0 0 0-1.5z"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Rediger
                  </button>
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Eksporter"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Eksporter
                  </button>
                  <hr aria-hidden="true">
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Slett"
                    data-color="danger"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M10 4.75c-.69 0-1.25.56-1.25 1.25v.25h6.5V6c0-.69-.56-1.25-1.25-1.25zm6.75 1.5V6A2.75 2.75 0 0 0 14 3.25h-4A2.75 2.75 0 0 0 7.25 6v.25H4.5a.75.75 0 0 0 0 1.5h.805l.876 11.384a1.75 1.75 0 0 0 1.745 1.616h8.148a1.75 1.75 0 0 0 1.745-1.616l.875-11.384h.806a.75.75 0 0 0 0-1.5h-2.75m-6 4.25a.75.75 0 0 0-1.5 0v6a.75.75 0 0 0 1.5 0zM14 9.75a.75.75 0 0 1 .75.75v6a.75.75 0 0 1-1.5 0v-6a.75.75 0 0 1 .75-.75"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Slett
                  </button>
                </li>
              </ul>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                aria-label="Velg rad for Akershus, Engelsk"
                type="checkbox"
                id="<removed>"
              >
            </ds-field>
          </td>
          <td>
            Akershus,
            <br>
            Engelsk
          </td>
          <td>
            Akershus
          </td>
          <td>
            Engelsk
          </td>
          <td>
            11538
          </td>
          <td>
            3.04
          </td>
          <td>
            3.94
          </td>
          <td>
            3.05
          </td>
          <td>
            <button
              data-variant="tertiary"
              type="button"
              data-size="sm"
              aria-label="Rediger"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M14.97 4.47a3.2 3.2 0 0 1 4.562.001c1.26 1.27 1.268 3.368-.002 4.637l-8.5 8.5a.75.75 0 0 1-.38.204l-4.5.922a.75.75 0 0 1-.882-.897l1-4.5a.75.75 0 0 1 .202-.367zm3.498 1.058a1.7 1.7 0 0 0-2.438.002l-.97.97 2.479 2.478.93-.93c.68-.68.681-1.832-.001-2.52M7.685 13.876 14 7.56l2.478 2.478-6.35 6.35-3.145.644zM3.5 20.25a.75.75 0 0 0 0 1.5h17a.75.75 0 0 0 0-1.5z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </td>
          <td>
            <button
              data-icon="true"
              data-variant="tertiary"
              type="button"
              popovertarget="row-menu-Akershus-Engelsk"
              title="Flere valg"
              aria-label="Handlinger"
              data-size="sm"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M10.5 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0m0 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0m1.5 4.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
            <div
              id="<removed>"
              popover="manual"
              data-placement="bottom-end"
              data-variant="default"
            >
              <ul>
                <li>
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Rediger"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M14.97 4.47a3.2 3.2 0 0 1 4.562.001c1.26 1.27 1.268 3.368-.002 4.637l-8.5 8.5a.75.75 0 0 1-.38.204l-4.5.922a.75.75 0 0 1-.882-.897l1-4.5a.75.75 0 0 1 .202-.367zm3.498 1.058a1.7 1.7 0 0 0-2.438.002l-.97.97 2.479 2.478.93-.93c.68-.68.681-1.832-.001-2.52M7.685 13.876 14 7.56l2.478 2.478-6.35 6.35-3.145.644zM3.5 20.25a.75.75 0 0 0 0 1.5h17a.75.75 0 0 0 0-1.5z"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Rediger
                  </button>
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Eksporter"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Eksporter
                  </button>
                  <hr aria-hidden="true">
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Slett"
                    data-color="danger"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M10 4.75c-.69 0-1.25.56-1.25 1.25v.25h6.5V6c0-.69-.56-1.25-1.25-1.25zm6.75 1.5V6A2.75 2.75 0 0 0 14 3.25h-4A2.75 2.75 0 0 0 7.25 6v.25H4.5a.75.75 0 0 0 0 1.5h.805l.876 11.384a1.75 1.75 0 0 0 1.745 1.616h8.148a1.75 1.75 0 0 0 1.745-1.616l.875-11.384h.806a.75.75 0 0 0 0-1.5h-2.75m-6 4.25a.75.75 0 0 0-1.5 0v6a.75.75 0 0 0 1.5 0zM14 9.75a.75.75 0 0 1 .75.75v6a.75.75 0 0 1-1.5 0v-6a.75.75 0 0 1 .75-.75"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Slett
                  </button>
                </li>
              </ul>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
      <ds-pagination
        aria-label="Sidenavigering"
        data-size="sm"
        role="navigation"
      >
        <ul>
          <li>
            <button
              aria-disabled="true"
              data-variant="tertiary"
              type="button"
              aria-label="Forrige side"
            >
            </button>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-current="true"
              aria-label="Side 1"
            >
              1
            </button>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-label="Side 2"
            >
              2
            </button>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-label="Side 3"
            >
              3
            </button>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-label="Side 4"
            >
              4
            </button>
          </li>
          <li>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-label="Side 10"
            >
              10
            </button>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-label="Neste side"
            >
            </button>
          </li>
        </ul>
      </ds-pagination>
      <div>
        <span>
          Rad 1-5 av 48
        </span>
        <ds-field>
          <label
            data-weight="medium"
            for="<removed>"
          >
            Rader per side
          </label>
          <select
            autocomplete="off"
            id="<removed>"
          >
            <option value="5">
              5
            </option>
            <option value="10">
              10
            </option>
            <option value="25">
              25
            </option>
            <option value="50">
              50
            </option>
          </select>
        </ds-field>
      </div>
    </div>
  </div>
</div>
`;

exports[`With Action Card 1`] = `
<div data-size="auto">
  <div>
    <div>
      <ds-field>
        <label
          data-weight="medium"
          for="<removed>"
        >
          Søk
        </label>
        <div>
          <input
            placeholder
            aria-label="Søk"
            type="search"
            value
            id="<removed>"
          >
          <button
            data-icon="true"
            data-variant="tertiary"
            type="reset"
            aria-label="Tøm"
          >
          </button>
        </div>
      </ds-field>
      <div>
        <ds-field>
          <label
            data-weight="medium"
            for="<removed>"
          >
            Velg emne(r)
          </label>
          <ds-suggestion
            data-multiple
            hover
            data-color="neutral"
          >
            <input
              placeholder=" "
              type="text"
              id="<removed>"
              aria-description="No selected"
              list=":u-datalist3"
              popovertarget=":u-datalist3"
            >
            <button
              aria-label="Tøm"
              hidden
              type="reset"
              aria-hidden="false"
              tabindex="-1"
            >
            </button>
            <u-datalist
              data-nofilter
              data-sr-plural="%d forslag"
              data-sr-singular="%d forslag"
              popover="manual"
              role="listbox"
              data-sr-of="of"
              hidden
              tabindex="-1"
              aria-multiselectable="true"
              id="<removed>"
              data-is-floating="true"
            >
              <u-option
                label="Engelsk"
                value="Engelsk"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Engelsk
              </u-option>
              <u-option
                label="Hovedmål"
                value="Hovedmål"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Hovedmål
              </u-option>
              <u-option
                label="Matematikk"
                value="Matematikk"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Matematikk
              </u-option>
              <u-option
                label="Sidemål"
                value="Sidemål"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Sidemål
              </u-option>
            </u-datalist>
          </ds-suggestion>
        </ds-field>
        <ds-field>
          <label
            data-weight="medium"
            for="<removed>"
          >
            Velg fylke(r)
          </label>
          <ds-suggestion
            data-multiple
            hover
            data-color="neutral"
          >
            <input
              placeholder=" "
              type="text"
              id="<removed>"
              aria-description="No selected"
              list=":u-datalist4"
              popovertarget=":u-datalist4"
            >
            <button
              aria-label="Tøm"
              hidden
              type="reset"
              aria-hidden="false"
              tabindex="-1"
            >
            </button>
            <u-datalist
              data-nofilter
              data-sr-plural="%d forslag"
              data-sr-singular="%d forslag"
              popover="manual"
              role="listbox"
              data-sr-of="of"
              hidden
              tabindex="-1"
              aria-multiselectable="true"
              id="<removed>"
              data-is-floating="true"
            >
              <u-option
                label="Agder"
                value="Agder"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Agder
              </u-option>
              <u-option
                label="Akershus"
                value="Akershus"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Akershus
              </u-option>
              <u-option
                label="Buskerud"
                value="Buskerud"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Buskerud
              </u-option>
              <u-option
                label="Finnmark"
                value="Finnmark"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Finnmark
              </u-option>
              <u-option
                label="Innlandet"
                value="Innlandet"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Innlandet
              </u-option>
              <u-option
                label="Nordland"
                value="Nordland"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Nordland
              </u-option>
              <u-option
                label="Oslo"
                value="Oslo"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Oslo
              </u-option>
              <u-option
                label="Rogaland"
                value="Rogaland"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Rogaland
              </u-option>
              <u-option
                label="Telemark"
                value="Telemark"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Telemark
              </u-option>
              <u-option
                label="Troms"
                value="Troms"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Troms
              </u-option>
              <u-option
                label="Vestland"
                value="Vestland"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Vestland
              </u-option>
              <u-option
                label="Viken"
                value="Viken"
                role="option"
                aria-disabled="false"
                aria-selected="false"
                id="<removed>"
              >
                Viken
              </u-option>
            </u-datalist>
          </ds-suggestion>
        </ds-field>
      </div>
    </div>
    <table
      data-hover="true"
      data-color="neutral"
    >
      <thead>
        <tr>
          <th>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                aria-label="Velg alle"
                type="checkbox"
                id="<removed>"
              >
            </ds-field>
          </th>
          <th>
            Fylke, emne
          </th>
          <th>
            Fylke
          </th>
          <th>
            Emne
          </th>
          <th>
            Antall elever
          </th>
          <th>
            Standpunkt
          </th>
          <th>
            Muntlig
          </th>
          <th>
            Skriftlig
          </th>
          <th aria-label="Rediger">
            Rediger
          </th>
          <th aria-label="Handlinger">
            Handling
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                aria-label="Velg rad for Agder, Engelsk"
                type="checkbox"
                id="<removed>"
              >
            </ds-field>
          </td>
          <td>
            Agder,
            <br>
            Engelsk
          </td>
          <td>
            Agder
          </td>
          <td>
            Engelsk
          </td>
          <td>
            11636
          </td>
          <td>
            3.07
          </td>
          <td>
            3.57
          </td>
          <td>
            3.26
          </td>
          <td>
            <button
              data-variant="tertiary"
              type="button"
              data-size="sm"
              aria-label="Rediger"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M14.97 4.47a3.2 3.2 0 0 1 4.562.001c1.26 1.27 1.268 3.368-.002 4.637l-8.5 8.5a.75.75 0 0 1-.38.204l-4.5.922a.75.75 0 0 1-.882-.897l1-4.5a.75.75 0 0 1 .202-.367zm3.498 1.058a1.7 1.7 0 0 0-2.438.002l-.97.97 2.479 2.478.93-.93c.68-.68.681-1.832-.001-2.52M7.685 13.876 14 7.56l2.478 2.478-6.35 6.35-3.145.644zM3.5 20.25a.75.75 0 0 0 0 1.5h17a.75.75 0 0 0 0-1.5z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </td>
          <td>
            <button
              data-icon="true"
              data-variant="tertiary"
              type="button"
              popovertarget="row-menu-Agder-Engelsk"
              title="Flere valg"
              aria-label="Handlinger"
              data-size="sm"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M10.5 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0m0 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0m1.5 4.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
            <div
              id="<removed>"
              popover="manual"
              data-placement="bottom-end"
              data-variant="default"
            >
              <ul>
                <li>
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Rediger"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M14.97 4.47a3.2 3.2 0 0 1 4.562.001c1.26 1.27 1.268 3.368-.002 4.637l-8.5 8.5a.75.75 0 0 1-.38.204l-4.5.922a.75.75 0 0 1-.882-.897l1-4.5a.75.75 0 0 1 .202-.367zm3.498 1.058a1.7 1.7 0 0 0-2.438.002l-.97.97 2.479 2.478.93-.93c.68-.68.681-1.832-.001-2.52M7.685 13.876 14 7.56l2.478 2.478-6.35 6.35-3.145.644zM3.5 20.25a.75.75 0 0 0 0 1.5h17a.75.75 0 0 0 0-1.5z"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Rediger
                  </button>
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Eksporter"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Eksporter
                  </button>
                  <hr aria-hidden="true">
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Slett"
                    data-color="danger"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M10 4.75c-.69 0-1.25.56-1.25 1.25v.25h6.5V6c0-.69-.56-1.25-1.25-1.25zm6.75 1.5V6A2.75 2.75 0 0 0 14 3.25h-4A2.75 2.75 0 0 0 7.25 6v.25H4.5a.75.75 0 0 0 0 1.5h.805l.876 11.384a1.75 1.75 0 0 0 1.745 1.616h8.148a1.75 1.75 0 0 0 1.745-1.616l.875-11.384h.806a.75.75 0 0 0 0-1.5h-2.75m-6 4.25a.75.75 0 0 0-1.5 0v6a.75.75 0 0 0 1.5 0zM14 9.75a.75.75 0 0 1 .75.75v6a.75.75 0 0 1-1.5 0v-6a.75.75 0 0 1 .75-.75"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Slett
                  </button>
                </li>
              </ul>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                aria-label="Velg rad for Agder, Matematikk"
                type="checkbox"
                id="<removed>"
              >
            </ds-field>
          </td>
          <td>
            Agder,
            <br>
            Matematikk
          </td>
          <td>
            Agder
          </td>
          <td>
            Matematikk
          </td>
          <td>
            14191
          </td>
          <td>
            3.72
          </td>
          <td>
            3.55
          </td>
          <td>
            3.16
          </td>
          <td>
            <button
              data-variant="tertiary"
              type="button"
              data-size="sm"
              aria-label="Rediger"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M14.97 4.47a3.2 3.2 0 0 1 4.562.001c1.26 1.27 1.268 3.368-.002 4.637l-8.5 8.5a.75.75 0 0 1-.38.204l-4.5.922a.75.75 0 0 1-.882-.897l1-4.5a.75.75 0 0 1 .202-.367zm3.498 1.058a1.7 1.7 0 0 0-2.438.002l-.97.97 2.479 2.478.93-.93c.68-.68.681-1.832-.001-2.52M7.685 13.876 14 7.56l2.478 2.478-6.35 6.35-3.145.644zM3.5 20.25a.75.75 0 0 0 0 1.5h17a.75.75 0 0 0 0-1.5z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </td>
          <td>
            <button
              data-icon="true"
              data-variant="tertiary"
              type="button"
              popovertarget="row-menu-Agder-Matematikk"
              title="Flere valg"
              aria-label="Handlinger"
              data-size="sm"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M10.5 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0m0 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0m1.5 4.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
            <div
              id="<removed>"
              popover="manual"
              data-placement="bottom-end"
              data-variant="default"
            >
              <ul>
                <li>
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Rediger"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M14.97 4.47a3.2 3.2 0 0 1 4.562.001c1.26 1.27 1.268 3.368-.002 4.637l-8.5 8.5a.75.75 0 0 1-.38.204l-4.5.922a.75.75 0 0 1-.882-.897l1-4.5a.75.75 0 0 1 .202-.367zm3.498 1.058a1.7 1.7 0 0 0-2.438.002l-.97.97 2.479 2.478.93-.93c.68-.68.681-1.832-.001-2.52M7.685 13.876 14 7.56l2.478 2.478-6.35 6.35-3.145.644zM3.5 20.25a.75.75 0 0 0 0 1.5h17a.75.75 0 0 0 0-1.5z"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Rediger
                  </button>
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Eksporter"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Eksporter
                  </button>
                  <hr aria-hidden="true">
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Slett"
                    data-color="danger"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M10 4.75c-.69 0-1.25.56-1.25 1.25v.25h6.5V6c0-.69-.56-1.25-1.25-1.25zm6.75 1.5V6A2.75 2.75 0 0 0 14 3.25h-4A2.75 2.75 0 0 0 7.25 6v.25H4.5a.75.75 0 0 0 0 1.5h.805l.876 11.384a1.75 1.75 0 0 0 1.745 1.616h8.148a1.75 1.75 0 0 0 1.745-1.616l.875-11.384h.806a.75.75 0 0 0 0-1.5h-2.75m-6 4.25a.75.75 0 0 0-1.5 0v6a.75.75 0 0 0 1.5 0zM14 9.75a.75.75 0 0 1 .75.75v6a.75.75 0 0 1-1.5 0v-6a.75.75 0 0 1 .75-.75"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Slett
                  </button>
                </li>
              </ul>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                aria-label="Velg rad for Agder, Hovedmål"
                type="checkbox"
                id="<removed>"
              >
            </ds-field>
          </td>
          <td>
            Agder,
            <br>
            Hovedmål
          </td>
          <td>
            Agder
          </td>
          <td>
            Hovedmål
          </td>
          <td>
            12283
          </td>
          <td>
            3.81
          </td>
          <td>
            3.57
          </td>
          <td>
            3.16
          </td>
          <td>
            <button
              data-variant="tertiary"
              type="button"
              data-size="sm"
              aria-label="Rediger"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M14.97 4.47a3.2 3.2 0 0 1 4.562.001c1.26 1.27 1.268 3.368-.002 4.637l-8.5 8.5a.75.75 0 0 1-.38.204l-4.5.922a.75.75 0 0 1-.882-.897l1-4.5a.75.75 0 0 1 .202-.367zm3.498 1.058a1.7 1.7 0 0 0-2.438.002l-.97.97 2.479 2.478.93-.93c.68-.68.681-1.832-.001-2.52M7.685 13.876 14 7.56l2.478 2.478-6.35 6.35-3.145.644zM3.5 20.25a.75.75 0 0 0 0 1.5h17a.75.75 0 0 0 0-1.5z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </td>
          <td>
            <button
              data-icon="true"
              data-variant="tertiary"
              type="button"
              popovertarget="row-menu-Agder-Hovedmål"
              title="Flere valg"
              aria-label="Handlinger"
              data-size="sm"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M10.5 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0m0 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0m1.5 4.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
            <div
              id="<removed>"
              popover="manual"
              data-placement="bottom-end"
              data-variant="default"
            >
              <ul>
                <li>
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Rediger"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M14.97 4.47a3.2 3.2 0 0 1 4.562.001c1.26 1.27 1.268 3.368-.002 4.637l-8.5 8.5a.75.75 0 0 1-.38.204l-4.5.922a.75.75 0 0 1-.882-.897l1-4.5a.75.75 0 0 1 .202-.367zm3.498 1.058a1.7 1.7 0 0 0-2.438.002l-.97.97 2.479 2.478.93-.93c.68-.68.681-1.832-.001-2.52M7.685 13.876 14 7.56l2.478 2.478-6.35 6.35-3.145.644zM3.5 20.25a.75.75 0 0 0 0 1.5h17a.75.75 0 0 0 0-1.5z"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Rediger
                  </button>
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Eksporter"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Eksporter
                  </button>
                  <hr aria-hidden="true">
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Slett"
                    data-color="danger"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M10 4.75c-.69 0-1.25.56-1.25 1.25v.25h6.5V6c0-.69-.56-1.25-1.25-1.25zm6.75 1.5V6A2.75 2.75 0 0 0 14 3.25h-4A2.75 2.75 0 0 0 7.25 6v.25H4.5a.75.75 0 0 0 0 1.5h.805l.876 11.384a1.75 1.75 0 0 0 1.745 1.616h8.148a1.75 1.75 0 0 0 1.745-1.616l.875-11.384h.806a.75.75 0 0 0 0-1.5h-2.75m-6 4.25a.75.75 0 0 0-1.5 0v6a.75.75 0 0 0 1.5 0zM14 9.75a.75.75 0 0 1 .75.75v6a.75.75 0 0 1-1.5 0v-6a.75.75 0 0 1 .75-.75"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Slett
                  </button>
                </li>
              </ul>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                aria-label="Velg rad for Agder, Sidemål"
                type="checkbox"
                id="<removed>"
              >
            </ds-field>
          </td>
          <td>
            Agder,
            <br>
            Sidemål
          </td>
          <td>
            Agder
          </td>
          <td>
            Sidemål
          </td>
          <td>
            11861
          </td>
          <td>
            3.75
          </td>
          <td>
            3.26
          </td>
          <td>
            3.51
          </td>
          <td>
            <button
              data-variant="tertiary"
              type="button"
              data-size="sm"
              aria-label="Rediger"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M14.97 4.47a3.2 3.2 0 0 1 4.562.001c1.26 1.27 1.268 3.368-.002 4.637l-8.5 8.5a.75.75 0 0 1-.38.204l-4.5.922a.75.75 0 0 1-.882-.897l1-4.5a.75.75 0 0 1 .202-.367zm3.498 1.058a1.7 1.7 0 0 0-2.438.002l-.97.97 2.479 2.478.93-.93c.68-.68.681-1.832-.001-2.52M7.685 13.876 14 7.56l2.478 2.478-6.35 6.35-3.145.644zM3.5 20.25a.75.75 0 0 0 0 1.5h17a.75.75 0 0 0 0-1.5z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </td>
          <td>
            <button
              data-icon="true"
              data-variant="tertiary"
              type="button"
              popovertarget="row-menu-Agder-Sidemål"
              title="Flere valg"
              aria-label="Handlinger"
              data-size="sm"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M10.5 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0m0 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0m1.5 4.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
            <div
              id="<removed>"
              popover="manual"
              data-placement="bottom-end"
              data-variant="default"
            >
              <ul>
                <li>
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Rediger"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M14.97 4.47a3.2 3.2 0 0 1 4.562.001c1.26 1.27 1.268 3.368-.002 4.637l-8.5 8.5a.75.75 0 0 1-.38.204l-4.5.922a.75.75 0 0 1-.882-.897l1-4.5a.75.75 0 0 1 .202-.367zm3.498 1.058a1.7 1.7 0 0 0-2.438.002l-.97.97 2.479 2.478.93-.93c.68-.68.681-1.832-.001-2.52M7.685 13.876 14 7.56l2.478 2.478-6.35 6.35-3.145.644zM3.5 20.25a.75.75 0 0 0 0 1.5h17a.75.75 0 0 0 0-1.5z"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Rediger
                  </button>
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Eksporter"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Eksporter
                  </button>
                  <hr aria-hidden="true">
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Slett"
                    data-color="danger"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M10 4.75c-.69 0-1.25.56-1.25 1.25v.25h6.5V6c0-.69-.56-1.25-1.25-1.25zm6.75 1.5V6A2.75 2.75 0 0 0 14 3.25h-4A2.75 2.75 0 0 0 7.25 6v.25H4.5a.75.75 0 0 0 0 1.5h.805l.876 11.384a1.75 1.75 0 0 0 1.745 1.616h8.148a1.75 1.75 0 0 0 1.745-1.616l.875-11.384h.806a.75.75 0 0 0 0-1.5h-2.75m-6 4.25a.75.75 0 0 0-1.5 0v6a.75.75 0 0 0 1.5 0zM14 9.75a.75.75 0 0 1 .75.75v6a.75.75 0 0 1-1.5 0v-6a.75.75 0 0 1 .75-.75"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Slett
                  </button>
                </li>
              </ul>
            </div>
          </td>
        </tr>
        <tr>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                aria-label="Velg rad for Akershus, Engelsk"
                type="checkbox"
                id="<removed>"
              >
            </ds-field>
          </td>
          <td>
            Akershus,
            <br>
            Engelsk
          </td>
          <td>
            Akershus
          </td>
          <td>
            Engelsk
          </td>
          <td>
            11538
          </td>
          <td>
            3.04
          </td>
          <td>
            3.94
          </td>
          <td>
            3.05
          </td>
          <td>
            <button
              data-variant="tertiary"
              type="button"
              data-size="sm"
              aria-label="Rediger"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M14.97 4.47a3.2 3.2 0 0 1 4.562.001c1.26 1.27 1.268 3.368-.002 4.637l-8.5 8.5a.75.75 0 0 1-.38.204l-4.5.922a.75.75 0 0 1-.882-.897l1-4.5a.75.75 0 0 1 .202-.367zm3.498 1.058a1.7 1.7 0 0 0-2.438.002l-.97.97 2.479 2.478.93-.93c.68-.68.681-1.832-.001-2.52M7.685 13.876 14 7.56l2.478 2.478-6.35 6.35-3.145.644zM3.5 20.25a.75.75 0 0 0 0 1.5h17a.75.75 0 0 0 0-1.5z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </td>
          <td>
            <button
              data-icon="true"
              data-variant="tertiary"
              type="button"
              popovertarget="row-menu-Akershus-Engelsk"
              title="Flere valg"
              aria-label="Handlinger"
              data-size="sm"
            >
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M10.5 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0m0 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0m1.5 4.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
            <div
              id="<removed>"
              popover="manual"
              data-placement="bottom-end"
              data-variant="default"
            >
              <ul>
                <li>
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Rediger"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M14.97 4.47a3.2 3.2 0 0 1 4.562.001c1.26 1.27 1.268 3.368-.002 4.637l-8.5 8.5a.75.75 0 0 1-.38.204l-4.5.922a.75.75 0 0 1-.882-.897l1-4.5a.75.75 0 0 1 .202-.367zm3.498 1.058a1.7 1.7 0 0 0-2.438.002l-.97.97 2.479 2.478.93-.93c.68-.68.681-1.832-.001-2.52M7.685 13.876 14 7.56l2.478 2.478-6.35 6.35-3.145.644zM3.5 20.25a.75.75 0 0 0 0 1.5h17a.75.75 0 0 0 0-1.5z"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Rediger
                  </button>
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Eksporter"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M12 2.75a.75.75 0 0 1 .75.75v8.69l3.22-3.22a.75.75 0 1 1 1.06 1.06l-4.5 4.5a.75.75 0 0 1-1.06 0l-4.5-4.5a.75.75 0 1 1 1.06-1.06l3.22 3.22V3.5a.75.75 0 0 1 .75-.75M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Eksporter
                  </button>
                  <hr aria-hidden="true">
                  <button
                    data-variant="tertiary"
                    type="button"
                    aria-label="Slett"
                    data-color="danger"
                  >
                    <svg
                      xmlns="http://www.w3.org/2000/svg"
                      width="1em"
                      height="1em"
                      fill="none"
                      viewbox="0 0 24 24"
                      focusable="false"
                      role="img"
                      aria-hidden="true"
                    >
                      <path
                        fill="currentColor"
                        fill-rule="evenodd"
                        d="M10 4.75c-.69 0-1.25.56-1.25 1.25v.25h6.5V6c0-.69-.56-1.25-1.25-1.25zm6.75 1.5V6A2.75 2.75 0 0 0 14 3.25h-4A2.75 2.75 0 0 0 7.25 6v.25H4.5a.75.75 0 0 0 0 1.5h.805l.876 11.384a1.75 1.75 0 0 0 1.745 1.616h8.148a1.75 1.75 0 0 0 1.745-1.616l.875-11.384h.806a.75.75 0 0 0 0-1.5h-2.75m-6 4.25a.75.75 0 0 0-1.5 0v6a.75.75 0 0 0 1.5 0zM14 9.75a.75.75 0 0 1 .75.75v6a.75.75 0 0 1-1.5 0v-6a.75.75 0 0 1 .75-.75"
                        clip-rule="evenodd"
                      >
                      </path>
                    </svg>
                    Slett
                  </button>
                </li>
              </ul>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
    <div>
      <ds-pagination
        aria-label="Sidenavigering"
        data-size="sm"
        role="navigation"
      >
        <ul>
          <li>
            <button
              aria-disabled="true"
              data-variant="tertiary"
              type="button"
              aria-label="Forrige side"
            >
            </button>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-current="true"
              aria-label="Side 1"
            >
              1
            </button>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-label="Side 2"
            >
              2
            </button>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-label="Side 3"
            >
              3
            </button>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-label="Side 4"
            >
              4
            </button>
          </li>
          <li>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-label="Side 10"
            >
              10
            </button>
          </li>
          <li>
            <button
              data-variant="tertiary"
              type="button"
              aria-label="Neste side"
            >
            </button>
          </li>
        </ul>
      </ds-pagination>
      <div>
        <span>
          Rad 1-5 av 48
        </span>
        <ds-field>
          <label
            data-weight="medium"
            for="<removed>"
          >
            Rader per side
          </label>
          <select
            autocomplete="off"
            id="<removed>"
          >
            <option value="5">
              5
            </option>
            <option value="10">
              10
            </option>
            <option value="25">
              25
            </option>
            <option value="50">
              50
            </option>
          </select>
        </ds-field>
      </div>
    </div>
  </div>
</div>
`;
